...
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SigninLogo" translatesAutoresizingMaskIntoConstraints="NO" id="IAl-Bu-tDr">
                                        <rect key="frame" x="87" y="167" width="240" height="40"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="Vur-nA-1gg"/>
                                        </constraints>
                                    </imageView>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cBc-9v-t5l">
                                        <rect key="frame" x="24" y="323" width="366" height="56"/>
                                        <color key="backgroundColor" systemColor="systemGrayColor"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="56" id="owv-5A-kTe"/>
                                        </constraints>
                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                <integer key="value" value="5"/>
                                            </userDefinedRuntimeAttribute>
                                        </userDefinedRuntimeAttributes>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BHz-Z1-7dG">
                                        <rect key="frame" x="24" y="399" width="366" height="56"/>
                                        <color key="backgroundColor" systemColor="systemGrayColor"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="56" id="aRU-BH-uFf"/>
                                        </constraints>
                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        <rect key="frame" x="24" y="475" width="366" height="56"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="56" id="bcC-NB-cw5"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                        <state key="normal" title="Log in">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                <integer key="value" value="8"/>
                                            </userDefinedRuntimeAttribute>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CYD-lG-Xwb">
                                <rect key="frame" x="338" y="786" width="56" height="56"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="56" id="23F-G8-pnS"/>
                                    <constraint firstAttribute="width" constant="56" id="g7i-lV-HIc"/>
                                </constraints>
                                <state key="normal" image="ActionButton"/>
                                <connections>
                                    <action selector="navButtonAction:" destination="s0k-qB-nXB" eventType="touchUpInside" id="qZU-af-uUR"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S1Z-W6-Vsp">
                                <rect key="frame" x="20" y="820.5" width="298" height="21.5"/>
...
